--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+python-input_output/__pycache__
 python-input_output/my_file_0.txt
 python-input_output/my_first_file.txt
 python-input_output/1-main.py
