--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ python-input_output/10-main.py
 python-input_output/11-main.py
 python-input_output/12-main.py`
 python-input_output/file_append.txt
+python-input_output/my_dict.json
+python-input_output/my_list.json
+python-input_output/my_set.json
