--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ python-input_output/file_append.txt
 python-input_output/my_dict.json
 python-input_output/my_list.json
 python-input_output/my_set.json
+python-input_output/my_fake.json
