--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ python-input_output/my_dict.json
 python-input_output/my_list.json
 python-input_output/my_set.json
 python-input_output/my_fake.json
+python-input_output/add_item.json
