update task 6 and make task 8

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ python-input_output/my_list.json
 python-input_output/my_set.json
 python-input_output/my_fake.json
 python-input_output/add_item.json
+python-input_output/8-main_2.py
+python-input_output/8-my_class.py
