--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ python-input_output/my_fake.json
 python-input_output/add_item.json
 python-input_output/8-main_2.py
 python-input_output/8-my_class.py
+python-input_output/8-my_class_2.py
