--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ python-input_output/__pycache__
 python-input_output/12-main.py
 python-input_output/student.json
 python-input_output/12-pascal_triangle.py
+SQL_more_queries/database.sql
