--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ python-input_output/12-main.py
 python-input_output/student.json
 python-input_output/12-pascal_triangle.py
 SQL_more_queries/database.sql
+python-object_relational_mapping/0-select_states.sql
