--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ python-object_relational_mapping/0-select_states.sql
 python-object_relational_mapping/4-cities_by_state.sql
 python-object_relational_mapping/6-model_state.sql
 python-object_relational_mapping/6-model_state.py
+python-object_relational_mapping/7-model_state_fetch_all.sql
