--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ python-object_relational_mapping/6-model_state.sql
 python-object_relational_mapping/6-model_state.py
 python-object_relational_mapping/7-model_state_fetch_all.sql
 python-object_relational_mapping/__pycache__/model_state.cpython-310.pyc
+python-object_relational_mapping/14-model_city_fetch_by_state.sql
